--- a/index.html
+++ b/index.html
@@ -1,1 +1,88 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
+ <meta charset="utf-8">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <meta name="description" content="CwryW Portfolio">
+  <meta name="google-site-verification" content="g7JYrHRszG4QkQHIfJsKZl6K1p84rL7ePbB7X6jIL1o" />
+  <meta name="keywords" content="Cwry,Programming,HTML,CSS,Portfolio">
+  <title>CwryW's Portfolio</title>
+</head>  
+ 
+link
+  rel="stylesheet"
+  href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+/>
+<link
+  href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap"
+  rel="stylesheet"
+/>
+<link
+  href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
+  rel="stylesheet"
+/>
+
+<nav id="navbar" class="nav">
+  <ul class="nav-list">
+    <li>
+      <a href="#welcome-section">About</a>
+    </li>
+    <li>
+      <a href="#projects">Works</a>
+    </li>
+    <li>
+      <a href="#contact">Contact</a>
+    </li>
+  </ul>
+</nav>
+
+<section id="welcome-section" class="welcome-section">
+  <h1>Welcome To My Personal Portfolio </h1>
+  
+</section>
+
+<section id="projects" class="projects-section">
+   <a href="https://codepen.io/collection/nwJzzj/"   class="project-tile" target="_blank">
+  <button id="projects-text">FreeCodeCamp Codepen.io Projects</button></a>
+     <a href="#"   class="project-tile" target="_blank">
+  <button id="projects-text">FreeCodeCamp Glitch.com Projects</button></a>
+   <a href="#" target="_blank">
+      <button id="projects-text"> Codecademy Badges</button></a>
+      <a href="#" target="_blank">  <button id="resume-text">Resume</button>  </a> 
+       <a href="#" target="_blank">  <button id="resume-text">Github</button>  </a> 
+   <a href="#" target="_blank">
+      <button id="projects-text">FreeCodeCamp Full Stack Certificate</button></a>
+      <a href="#" target="_blank">  <button id="resume-text">Autodesk Certificates</button>  </a> 
+  
+</section>
+
+<section id="contact" class="contact-section">
+
+  <div class="contact-links">
+   
+    <a
+      id="profile-link"
+      href="https://github.com/"
+      target="_blank"
+      class="btn contact-details"
+      ><i class="fab fa-github"></i> GitHub</a
+    >
+     <br>
+    <a href="mailto:example@example.com" class="btn contact-details"
+      ><i class="fas fa-at"></i> Email Me</a
+    >
+   
+  </div>
+</section>
+</body>
+
+<footer>
+   
+  <p>
+    &copy; Created  By CoryW
+  </p>
+</footer>
+ 
+</html>
 
