--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo:300">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
-  <link rel="stylesheet" href="style.css" >
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap">
-<link rel="stylesheet"  href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap">
+  <link rel="stylesheet" href="style.css">
 
 <nav id="navbar" class="nav">
   <ul class="nav-list">
@@ -74,10 +72,9 @@
 </body>
 
 <footer>
-   
-  <p>
-    &copy; Created  By CoryW
-  </p>
+ 
+    &copy; 2019 CoryW
+ 
 </footer>
  
 </html>
