--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 
-
 <ul class="topnav">
   <li><a class="active" href="#welcome-section">Home</a>
     </li>
@@ -39,36 +38,88 @@
 </section>
 
 <section id="projects" class="projects-section">
+  
+ 
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="#">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRz8AnwqBRGT-bEbjNW4OTvTE6v7QRJ5498vGInmNNENWdEF_WE1w" alt="Autodesk Certificates" width="600" height="400">
+    </a>
+    <div class="desc">Autodesk Certificates</div>
+  </div>
+</div>
+
+  
+  
+  
+  <div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="#">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRvKGmBtDFRI2MvW6L4m3lgOoFZRkvVNOWPUPN_1by3Bkc2c40RYQ" alt="Github" width="600" height="400">
+    </a>
+    <div class="desc">Github</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="#">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKSqLRdotzxZyJUtkBIyLvjmgZBMzT-ap2w5Csk27Gy1q-0GV2Xw" alt="Full Stack Certificate" width="600" height="400">
+    </a>
+    <div class="desc">FreeCodeCamp Full Stack Certificate</div>
+  </div>
+</div>
+
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://codepen.io/collection/nwJzzj/">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRroy7l0CetaXdLfuypsyOSpQXejP42lBlL5qvq9N6ZLgIF3d0T4Q" alt="Resume" width="600" height="400">
+    </a>
+    <div class="desc">Resume</div>
+  </div>
+</div>
+  
+  
  <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_forest.jpg">
-      <img src="img_forest.jpg" alt="Forest" width="600" height="400">
+    <a target="_blank" href="#">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQU-yLfwcdWuV-zKU0gT4z3qcKO4ov4ju_i67DWy_OI3th9wz0e" alt="Codecademy" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc"> Codecademy Badges</div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_lights.jpg">
-      <img src="img_lights.jpg" alt="Northern Lights" width="600" height="400">
+    <a target="_blank" href="#">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQahkMb5nAS0r-ZAfLECJ9WgVc8XE2X4BSu8pn8HHTwfEpm-GWD" alt="Glitch" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">FreeCodeCamp Glitch.com Projects</div>
   </div>
 </div>
 
 <div class="responsive">
   <div class="gallery">
-    <a target="_blank" href="img_mountains.jpg">
-      <img src="img_mountains.jpg" alt="Mountains" width="600" height="400">
+    <a target="_blank" href="https://codepen.io/collection/nwJzzj/">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS2NGNCwSOXdj6Un7Kk6YVoMC7rrvNykaOcpv9PRlHRxC9gadsI" alt="Codepen" width="600" height="400">
     </a>
-    <div class="desc">Add a description of the image here</div>
+    <div class="desc">FreeCodeCamp Codepen.io Projects</div>
   </div>
 </div>
-
-<div class="clearfix"></div>
    
+<div class="responsive">
+  <div class="gallery">
+    <a target="_blank" href="https://codepen.io/collection/nwJzzj/">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRNhWzkasR75fpOOf-_AZYx5dKFVz0LwKzsaAr5ChkcCNWegJ4b5g" alt="Misc" width="600" height="400">
+    </a>
+    <div class="desc">Other projects</div>
+  </div>
+</div>  
+</section>
 
+  
+<div class="clearfix"></div>
+  
 <section id="contact" class="contact-section">
 
   <div class="contact-links">
