--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
  
   
 <body>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo:300">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap"/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"/>
+
 
 <ul class="topnav">
   <li><a class="active" href="#welcome-section">Home</a>
