--- a/index.html
+++ b/index.html
@@ -28,20 +28,17 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 
-<ul class="topnav">
-  <li><a class="active" href="#welcome-section">Home</a>
-    </li>
-    <li>
-      <a href="#projects">Works</a>
-    </li>
-    <li>
-      <a href="#contact">Contact</a>
-    </li>
-  </ul>
- 
 
-  
  
+<ul class="topnav">
+  <div id="mynav">
+<li>  <button class="btn active"><a href="#welcome-section">Home</a></button></li>
+ <li>   <button class="btn"><a href="#projects">Works</a></button></li>
+ 
+ <li>    <button class="btn"><a href="#contact">Contacts</a></button></li>
+</div> 
+  </ul>
+
   
 <section id="welcome-section" class="welcome-section">
   <h1>Welcome To My Personal Portfolio </h1>
