--- a/index.html
+++ b/index.html
@@ -28,7 +28,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 
+  <script>
+  var myNav = document.getElementById("mynav");
+var btn = myNav.getElementsByClassName("btn");
+for (var i = 0; i < btn.length; i++) {
+  btn[i].addEventListener("click", function() {
+  var curr = document.getElementsByClassName("active");
+  curr[0].className = curr[0].className.replace(" active", "");
+  this.className += " active";
+  });
+}
 
+  </script>
  
 <ul class="topnav">
   <div id="mynav">
