--- a/index.html
+++ b/index.html
@@ -28,9 +28,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
   <link rel="stylesheet" href="style.css">
    
+  <script>
+$(document).ready(function(){
+  $("btn").click(function(){
+    $("button").addClass("active");
+  
+  });
+});
+</script>
+  
 <ul class="topnav">
   <div id="mynav">
-<li>  <button class="btn active"><a href="#welcome-section">Home</a></button></li>
+<li>  <button class="btn"><a href="#welcome-section">Home</a></button></li>
  <li>   <button class="btn"><a href="#projects">Works</a></button></li>
  
  <li>    <button class="btn"><a href="#contact">Contacts</a></button></li>
