--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
    
   <script>
 $(document).ready(function(){
-  $("btn").click(function(){
-    $("button").addClass("active");
+  $("button").click(function(){
+    $(this).addClass("active");
   
   });
 });
