--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <script>
 $(document).ready(function(){
   $("button").click(function(){
-    $(this).addClass("active");
+    $("li").addClass("active");
   
   });
 });
