--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
   <meta name="google-site-verification" content="g7JYrHRszG4QkQHIfJsKZl6K1p84rL7ePbB7X6jIL1o" />
   <meta name="keywords" content="Cwry,Programming,HTML,CSS,Portfolio">
   <title>CwryW's Portfolio</title>
+ 
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script>
+$(document).ready(function(){
+  $("button").click(function(){
+    $("li").addClass("active");
+  
+  });
+});
+</script>
+ 
 </head>  
  
  <body>
@@ -26,17 +37,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo:300">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js">
   <link rel="stylesheet" href="style.css">
    
-  <script>
-$(document).ready(function(){
-  $("button").click(function(){
-    $("li").addClass("active");
-  
-  });
-});
-</script>
+
   
 <ul class="topnav">
   <div id="mynav">
