--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <script>
 $(document).ready(function(){
   $("button").click(function(){
-    $("li").addClass("active");
-  
+    $("h1, h2, p").addClass("blue");
+   
   });
-});
+
 </script>
  
 </head>  
