--- a/index.html
+++ b/index.html
@@ -39,7 +39,15 @@ $(document).ready(function(){
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
   <link rel="stylesheet" href="style.css">
    
+<h1>Heading 1</h1>
+<h2>Heading 2</h2>
 
+<p>This is a paragraph.</p>
+<p>This is another paragraph.</p>
+
+<div>This is some important text!</div><br>
+
+<button>Add classes to elements</button>
   
 <ul class="topnav">
   <div id="mynav">
