--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ $(document).ready(function(){
 <p>This is a paragraph.</p>
 <p>This is another paragraph.</p>
 
-<div>This is some important text!</div><br>
+<div>is some important text!</div><br>
 
 <button>Add classes to elements</button>  
 </section>
