--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@ $(document).ready(function(){
   });
 
 </script>
- 
+ <style>
+.important {
+font-weight: bold;
+  font-size: xx-large;
+}
+
+.blue {
+  color: blue;
+}
+</style>
 </head>  
  
  <body>
