--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 $(document).ready(function(){
   $("button").click(function(){
-    $("h1, h2, p").addClass("blue");
-   
+    $("h1").addClass("blue");
+  })
   });
 
 </script>
