--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     >
      <br>
     <a href="mailto:example@example.com" class="btn contact-details"
-      ><i class="fas fa-at"></i> Email Me</a
+      ><i class="fas fa-at"></i> Email</a
     >
    
   </div>
