--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
   <meta name="google-site-verification" content="g7JYrHRszG4QkQHIfJsKZl6K1p84rL7ePbB7X6jIL1o" />
   <meta name="keywords" content="Cwry,Programming,HTML,CSS,Portfolio">
   <title>CwryW's Portfolio</title>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script>
+$(document).ready(function(){
+  $("button").click(function(){
+    $("h1, h2, p").addClass("blue");
+    $("div").addClass("important");
+  });
+});
+</script>
+<style>
+.important {
+  font-weight: bold;
+  font-size: xx-large;
+}
+
+.blue {
+  color: blue;
+}
+</style>
 </head>  
  
  <body>
@@ -47,8 +66,16 @@
   <h1>Welcome To My Personal Portfolio </h1>
   
 </section>
+<h1>Heading 1</h1>
+<h2>Heading 2</h2>
 
-<section id="projects" class="projects-section">
+<p>This is a paragraph.</p>
+<p>This is another paragraph.</p>
+
+<div>This is some important text!</div><br>
+
+<button>Add classes to elements</button>
+  <section id="projects" class="projects-section">
   
  
 <div class="responsive">
