--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="google-site-verification" content="g7JYrHRszG4QkQHIfJsKZl6K1p84rL7ePbB7X6jIL1o" />
   <meta name="keywords" content="Cwry,Programming,HTML,CSS,Portfolio">
   <title>CwryW's Portfolio</title>
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script>
 $(document).ready(function(){
   $("button").click(function(){
