--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ $(document).ready(function(){
   <h1>Welcome To My Personal Portfolio </h1>
   
 </section>
+  <div>
 <h1>Heading 1</h1>
 <h2>Heading 2</h2>
 
@@ -74,6 +75,7 @@ $(document).ready(function(){
 <div>This is some important text!</div><br>
 
 <button>Add classes to elements</button>
+  </div>
   <section id="projects" class="projects-section">
   
  
