--- a/index.html
+++ b/index.html
@@ -10,22 +10,7 @@
   <title>CwryW's Portfolio</title>
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script>
-$(document).ready(function(){
-  $("button").click(function(){
-    $("h1, h2, p").addClass("blue"); 
-});
-</script>
-<style>
-.important {
-  font-weight: bold;
-  font-size: xx-large;
-}
-
-.blue {
-  color: blue;
-}
-</style>
+ 
 </head>  
  
  <body>
@@ -46,17 +31,18 @@ $(document).ready(function(){
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 
+  <div id="mynav">
 <ul class="topnav">
-  <li><a class="active" href="#welcome-section">Home</a>
+  <li><button class="btn active" href="#welcome-section">Home</button>
     </li>
     <li>
-      <a href="#projects">Works</a>
+    <button class="btn" href="#projects">Works</button>
     </li>
     <li>
       <a href="#contact">Contact</a>
     </li>
   </ul>
- 
+ </div>
 
   
  
