--- a/index.html
+++ b/index.html
@@ -31,7 +31,17 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 
-  <div id="mynav">
+  <div id="mynav"> 
+  <button class="btn active" href="#welcome-section">Home</button>
+    
+    <button class="btn" href="#projects">Works</button>
+     
+      <button href="#contact">Contact</button>
+  
+ </div>
+
+  /*
+    <div id="mynav">
 <ul class="topnav">
   <li><button class="btn active" href="#welcome-section">Home</button>
     </li>
@@ -43,7 +53,7 @@
     </li>
   </ul>
  </div>
-
+  */
   
  
   
@@ -159,17 +169,6 @@
 <div class="clearfix"></div>
 
 <footer>
- 
-<h1>Heading 1</h1>
-<h2>Heading 2</h2>
-
-<p>This is a paragraph.</p>
-<p>This is another paragraph.</p>
-
-<div>This is some important text!</div><br>
-
-<button>Add classes to elements</button>
- 
   <p>
     &copy; 2019 CoryW
   </p>
