--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
  <meta charset="utf-8">
@@ -8,51 +8,9 @@
   <meta name="google-site-verification" content="g7JYrHRszG4QkQHIfJsKZl6K1p84rL7ePbB7X6jIL1o" />
   <meta name="keywords" content="Cwry,Programming,HTML,CSS,Portfolio">
   <title>CwryW's Portfolio</title>
-  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">
+</head>  
  
-<style>
-/* Style the buttons */
-.btn {
-  border: none;
-  outline: none;
-  padding: 10px 16px;
-  background-color: #f1f1f1;
-  cursor: pointer;
-  font-size: 18px;
-}
-
-/* Style the active class, and buttons on mouse-over */
-.active, .btn:hover {
-  background-color: #666;
-  color: white;
-}
-</style>
-</head>
-<body>
-
-<h1>Active Button</h1>
-<p>Highlight the active/current (pressed) button.</p>
-  
-<div id="myDIV">
-  <button class="btn">1</button>
-  <button class="btn active">2</button>
-  <button class="btn">3</button>
-  <button class="btn">4</button>
-  <button class="btn">5</button>
-</div>
-
-<script>
-// Add active class to the current button (highlight it)
-var header = document.getElementById("myDIV");
-var btns = header.getElementsByClassName("btn");
-for (var i = 0; i < btns.length; i++) {
-  btns[i].addEventListener("click", function() {
-  var current = document.getElementsByClassName("active");
-  current[0].className = current[0].className.replace(" active", "");
-  this.className += " active";
-  });
-}
-</script>
+ <body>
   <link
   rel="stylesheet"
   href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -70,31 +28,18 @@ for (var i = 0; i < btns.length; i++) {
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
   <link rel="stylesheet" href="style.css">
 
-  <div id="mynav"> 
-  <button class="btn active" href="#welcome-section">Home</button>
-    
-    <button class="btn" href="#projects">Works</button>
-     
-      <button  class="btn" href="#contact">Contact</button>
-  
- </div>
-
-  /*
-    <div id="mynav">
 <ul class="topnav">
-  <li><button class="btn active" href="#welcome-section">Home</button>
+  <li><a class="active" href="#welcome-section">Home</a>
     </li>
     <li>
-    <button class="btn" href="#projects">Works</button>
+      <a href="#projects">Works</a>
     </li>
     <li>
       <a href="#contact">Contact</a>
     </li>
   </ul>
- </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+ 
 
-  */
   
  
   
@@ -102,8 +47,8 @@ for (var i = 0; i < btns.length; i++) {
   <h1>Welcome To My Personal Portfolio </h1>
   
 </section>
-  
-  <section id="projects" class="projects-section">
+
+<section id="projects" class="projects-section">
   
  
 <div class="responsive">
@@ -199,7 +144,7 @@ for (var i = 0; i < btns.length; i++) {
     >
      <br>
     <a href="mailto:example@example.com" class="btn contact-details"
-      ><i class="fas fa-at"></i> Email</a
+      ><i class="fas fa-at"></i> Email Me</a
     >
    
   </div>
@@ -210,6 +155,7 @@ for (var i = 0; i < btns.length; i++) {
 <div class="clearfix"></div>
 
 <footer>
+   
   <p>
     &copy; 2019 CoryW
   </p>
