--- a/index.html
+++ b/index.html
@@ -33,7 +33,15 @@
   <button class="btn">5</button>
 </div>
 
- 
+ <script>  var header = document.getElementById("myDIV");
+var btns = header.getElementsByClassName("btn");
+for (var i = 0; i < btns.length; i++) {
+  btns[i].addEventListener("click", function() {
+  var current = document.getElementsByClassName("active");
+  current[0].className = current[0].className.replace(" active", "");
+  this.className += " active";
+  });
+}</script>
 
 </body>
 </html>
