--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
    
    
 <ul class="topnav" id="myDIV">
-  <li><a class="active" href="#welcome-section">Home</a>
+  <li><a class="btn active" href="#welcome-section">Home</a>
     </li>
     <li>
       <a class="btn" href="#projects">Works</a>
