--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <link rel="stylesheet" href="style.css">
 
    
-   
-<ul class="topnav" id="myDIV">
+   <div  id="myDIV">
+<ul class="topnav">
   <li><a class="btn active" href="#welcome-section">Home</a>
     </li>
     <li>
@@ -40,7 +40,7 @@
       <a class="btn" href="#contact">Contact</a>
     </li>
   </ul>
- 
+  </div>
 
   <script>  var header = document.getElementById("myDIV");
 var btns = header.getElementsByClassName("btn");
