--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="style.css">
 
    
-   <div id="myDIV">
+   <div id="mynav">
 <ul class="topnav">
   <li><a class="btn active" href="#welcome-section">Home</a>
     </li>
@@ -42,15 +42,17 @@
   </ul>
   </div>
 
-  <script>  var header = document.getElementById("myDIV");
-var btns = header.getElementsByClassName("btn");
-for (var i = 0; i < btns.length; i++) {
+  <script>  
+   var myNav = document.getElementById("mynav");
+var btn = myNav.getElementsByClassName("btn");
+for (var i = 0; i < btn.length; i++) {
   btns[i].addEventListener("click", function() {
   var current = document.getElementsByClassName("active");
   current[0].className = current[0].className.replace(" active", "");
   this.className += " active";
   });
-}</script>
+}
+  </script>
  
  
   
