--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
    var myNav = document.getElementById("mynav");
 var btn = myNav.getElementsByClassName("btn");
 for (var i = 0; i < btn.length; i++) {
-  btns[i].addEventListener("click", function() {
-  var current = document.getElementsByClassName("active");
-  current[0].className = current[0].className.replace(" active", "");
+  btn[i].addEventListener("click", function() {
+  var curr = document.getElementsByClassName("active");
+  curr[0].className = curr[0].className.replace(" active", "");
   this.className += " active";
   });
 }
