--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@ for (var i = 0; i < btn.length; i++) {
 
   
 <div class="clearfix"></div>
-  
-<section id="contact" class="contact-section">
+  <hr>
+<section id="contact" class="contact-section"  style="color:white;font-size: 30px;">
 
   <div class="contact-links">
    
@@ -157,7 +157,7 @@ for (var i = 0; i < btn.length; i++) {
     >
      <br>
     <a href="mailto:example@example.com" class="btn contact-details"
-      ><i class="fas fa-at"></i> Email Me</a
+      ><i class="fas fa-at"></i> Email</a
     >
    
   </div>
@@ -169,7 +169,7 @@ for (var i = 0; i < btn.length; i++) {
 
 <footer>
    
-  <p>
+  <p style="color:white;font-size: 30px;">
     &copy; 2019 CoryW
   </p>
 </footer>
