--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ for (var i = 0; i < btn.length; i++) {
   
 <div class="clearfix"></div>
   <hr>
-<section id="contact" class="contact-section"  style="color:white;font-size: 30px;">
+<section id="contact" class="contact-section">
 
   <div class="contact-links">
    
@@ -169,7 +169,7 @@ for (var i = 0; i < btn.length; i++) {
 
 <footer>
    
-  <p style="color:white;font-size: 30px;">
+  <p>
     &copy; 2019 CoryW
   </p>
 </footer>
