--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ for (var i = 0; i < btn.length; i++) {
 <footer>
    
   <p>
-    &copy; 2019 CoryW
+    &copy; 2019 CwryW
   </p>
 </footer>
 </html>
