--- a/index.html
+++ b/index.html
@@ -3,30 +3,27 @@
 <head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <meta name="description" content="CwryW Portfolio">
+ <meta name="description" content="CwryW Portfolio">
   <meta name="google-site-verification" content="g7JYrHRszG4QkQHIfJsKZl6K1p84rL7ePbB7X6jIL1o" />
   <meta name="keywords" content="Cwry,Programming,HTML,CSS,Portfolio">
-  <title>CwryW's Portfolio</title>
+ <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" />
+ 
+<link rel="stylesheet" href="style.css"> 
+ 
+ <title>CwryW's Portfolio</title>
 </head>  
  
  <body>
-  <link
-  rel="stylesheet"
-  href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-/>
-<link
-  href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap"
-  rel="stylesheet"
-/>
-<link
-  href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
-  rel="stylesheet"
-/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo:300">
+  
+
+<!--  
+  <link href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap" rel="stylesheet"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.7.2/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+ <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo:300">
+<link  rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:200i,300,400&display=swap"/>
+-->
 
    
    <div id="mynav">
@@ -116,7 +113,7 @@ for (var i = 0; i < btn.length; i++) {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="#">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQahkMb5nAS0r-ZAfLECJ9WgVc8XE2X4BSu8pn8HHTwfEpm-GWD" alt="Glitch" width="600" height="400">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR0hEeRsauXOKamgLC2dKzhfR1hEDiL2JChFsvztFCRHZZPplWD" alt="Glitch" width="600" height="400">
     </a>
     <div class="desc">FreeCodeCamp Glitch.com Projects</div>
   </div>
@@ -125,7 +122,7 @@ for (var i = 0; i < btn.length; i++) {
 <div class="responsive">
   <div class="gallery">
     <a target="_blank" href="https://codepen.io/collection/nwJzzj/">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS2NGNCwSOXdj6Un7Kk6YVoMC7rrvNykaOcpv9PRlHRxC9gadsI" alt="Codepen" width="600" height="400">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQhfLqL4ISDZB9j55TUNefGsJBgR__W2D8lty2QYwdkA6VafKT2" width="600" height="400">
     </a>
     <div class="desc">FreeCodeCamp Codepen.io Projects</div>
   </div>
@@ -174,4 +171,3 @@ for (var i = 0; i < btn.length; i++) {
   </p>
 </footer>
 </html>
- 
